syntax = "proto3";

package wso2.discovery.config.enforcer;

option go_package = "github.com/envoyproxy/go-control-plane/wso2/discovery/config/enforcer;enforcer";
option java_package = "org.wso2.choreo.connect.discovery.config.enforcer";
option java_outer_classname = "ClaimMappingProto";
option java_multiple_files = true;

// [#protodoc-title: ClaimMapping]

// Claim mapping model
message ClaimMapping {

    // Remote claim
    string remoteClaim = 1;

    // Local claim
    string localClaim = 2;
}
